Show attribute requirements.

--- a/app/templates/configure/character.html
+++ b/app/templates/configure/character.html
@@ -157,7 +157,7 @@
                         <td>${attribName}
                             <input type="hidden" name="attrib_id[]" value="${attribId}">
                         </td><td>
-                            <input type="number" name="attrib_val[]" value="${attribVal}" size="8">
+                            <input type="number" name="attrib_${attribId}_val" value="${attribVal}" size="8">
                         </td><td>
                             <button class="remove-attrib-btn lesser-button">Remove</button>
                         </td>
