--- a/app/templates/play/item.html
+++ b/app/templates/play/item.html
@@ -255,12 +255,27 @@
                         </td>
                         <td id="recipe-{{ recipe.id }}-source-{{ item.id }}-at">
                         {% if source.pile %}
-                            {% if source.pile.container %}
-                                {{ source.pile.container.name }}
-                            {% elif source.pile.quantity > 0 %}
-                                (General)
+                            {% set container = source.pile.container %}
+                            {% if source.pile.PILE_TYPE == 'universal' %}
+                                {% if source.pile.quantity > 0 %}
+                                    (General)
+                                {% else %}
+                                    <center>&mdash;</center>
+                                {% endif %}
                             {% else %}
-                                <center>&mdash;</center>
+                                {% if source.pile.PILE_TYPE == 'carried' %}
+                                    {% set link = url_for('play_char', char_id=container.id) %}
+                                {% elif source.pile.PILE_TYPE == 'local' %}
+                                    {% set link = url_for('play_location', loc_id=container.id) %}
+                                {% else %}
+                                    {% set link = '/unexpected-pile-type' %}
+                                {% endif %}
+                                {% set letter = link_letters.next(link) %}
+                                <script>
+                                    linkForKey['{{ letter }}'] = "{{ link }}";
+                                </script>
+                                <span>[{{ letter }}]</span>
+                                <a href="{{ link }}">{{ container.name }}</a><br>
                             {% endif %}
                         {% else %}
                             <center>&mdash;</center>
@@ -268,15 +283,30 @@
                         </td>
                     </tr>
                 {% endfor %}
-                {% for req in recipe.attribs %}
+                {% for req in recipe.attribs.values() %}
                     <tr>
                         <td>{{ req.attrib.name }}</td>
                         <td>
-                            ({{ source.q_required | dec2str }})
+                            ({{ req.val | dec2str }})
                         </td>
                         {% if req.entity %}
-                            <td>{{ req.entity.attribs[req.attrib_id] }}</td>
-                            <td>{{ req.entity.name }}</td>
+                            {% set entity = req.entity %}
+                            <td>{{ entity.attribs[req.attrib.id].val | dec2str }}</td>
+                            {% if entity.__class__.__name__ == 'Character' %}
+                                {% set link = url_for('play_char', char_id=entity.id) %}
+                            {% elif entity.__class__.__name__ == 'Item' %}
+                                {% set link = url_for('play_item', item_id=entity.id) %}
+                            {% else %}
+                                {% set link = '/unexpected-entity-type' %}
+                            {% endif %}
+                            {% set letter = link_letters.next(link) %}
+                            <script>
+                                linkForKey['{{ letter }}'] = "{{ link }}";
+                            </script>
+                            <td>
+                                <span>[{{ letter }}]</span>
+                                <a href="{{ link }}">{{ entity.name }}</a>
+                            </td>
                         {% else %}
                             <td>(0)</td>
                             <td>(None)</td>
