--- a/app/templates/configure/character.html
+++ b/app/templates/configure/character.html
@@ -29,6 +29,8 @@
                 </option>
             {% endfor %}
         </select><br>
+        <label for="position">Position in Grid:</label>
+        <input type="text" id="position" name="position" value="{{ current.position[0] }},{{ current.position[1] }}" size="5"> <span class="label-like">left, top</span><br>
 
         <div id="attrib-container" class="outer-border">
             <table id="attrib-table" style="display: none;">
